--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
+    "electron-store": "^8.0.1",
+    "element-ui": "^2.15.6",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.21",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -20,8 +30,12 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "electron": "^15.4.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
