--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,9 +30,9 @@ build_script:
 test: off
 
 artifacts: # push all files in directory
-  - path: build\*.exe
+  - path: dist_electron\*.exe
     name: installer
-  - path: build\*.yml
+  - path: dist_electron\*.yml
     name: yml
 
 #deploy:
